# ner

./: CMakeLists.txt  Document.cpp  Document.h  FeatureExtractor.cpp  FeatureExtractor.h  Utils.cpp  Utils.h  gazetteers-list.am.txt  main.cpp  make.sh
liblinear-2.11/: .predict.c.swp
liblinear-poly2-2.01/: CMakeLists.txt  Makefile  Makefile.win  README.poly2  linear.cpp  linear.h  predict  train  train.c
liblinear-poly2-2.01/matlab/: Makefile  linear_model_matlab.c  make.m  train.c
liblinear-poly2-2.01/python/: liblinear.py  liblinearutil.py
libs/: linear-weight.h
resources/: gazetteers-list-orig.txt  good_features_0.15_b20
